<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="version">4.2.1</string>
    <string name="app_name">哆啦A梦</string>
    <string name="action_settings">Settings</string>
    <string name="addNotify">add</string>
    <string name="ClearBtn">清理数据</string>
	<string name="Screenshot">截图</string>
	<string name="ScanFile">浏览</string>
	<string name="startObserver">开始监控</string>
	<string name="ObserverPath">监控路径：</string>
	<string name="ClearZSData">清理数据</string>
	<string name="ScreenCap">截图</string>
	<string name="NotifyScreenshot">截图</string>
	<string name="failFoundScreenshot">截图文件不在，请检查sd卡是否正常</string>
	<string name="notifyIconDesc">左侧大icon</string>
	<string name="notifyScreenShotBtn">通知里截图按钮</string>
	<string name="uninstallallpackages">卸载除助手外全部app</string>
	<string name="uninstallApps">卸载所有app</string>
	<string name="uninstallconfirmdlg">确认要卸载所有app？</string>
	<string name="mailreceiver">邮件接收者</string>
	<string name="fileobservestop">已停止监控</string>
	<string name="NoContactSetted">没有设置邮件接收者</string>
	<string name="fileobserverStart">监控已开始</string>
	
	<string name="proxyactivity">代理相关设置</string>	
	<string name="proxysetbtn">设置代理</string>
	
	<string name="ProxySettings">代理设置项</string>
	<string name="MainSettings">代理开关项</string>
	<string name="proxySwitch">代理开关</string>
	<string name="proxyHost">代理地址</string>
	<string name="proxyPort">代理端口号</string>
	<string name="tcpdump">tcpdump开关</string>
	<string name="CreateMem">填充</string>
	<string name="freemem">释放</string>
	<string name="memHint">请输入小于950的整数</string>
	<string name="floatwinontext">悬浮窗开启中</string>
	<string name="floatwinofftext">悬浮窗已关闭</string>
	<string name="thanks">感谢伟大的开源</string>
	
	<string name="source">手机助手测试组低调出品</string>
	<string name="mt_download_dir_url">http://installer.sogou-inc.com/mirror_installer/smt_android/</string>
	<string name="sendjsontestResult">勾选后启动时会检查并回传json容错测试结果</string>
	<string name="sendnow">立即运行</string>
	<string name="schedule">计划任务</string>
	<string name="selectall">全选</string>
	
	<string name="notifyTitileText">测试の小叮当</string>
	<string name="author">助手测试组</string>
	<string name="sharefile">发送文件到已设置的邮箱</string>
	<string name="ttsendfile">文件%1$s正在往%2$s邮箱发呢，别急哈</string>
	<string name="cfg_appdata">AppData</string>
	
	<string name="cfg_key_recevier">receiver</string>
	<string name="contact_miss">收件人为空，请先设置收件人</string>
	<string name="cfg_ftp_state">ftpState</string>
	<string name="anyfilesharetitle">来自手机的文件</string>
	<string name="ttFtpVersionLimit">当前系统版本低于4.0，不支持该功能</string>
	<string name="ftpup">ftp已开启</string>
	<string name="ftpdown">ftp已关闭</string>
	<string name="ftpuping">ftp开启中</string>
	<string name="ftpdowning">ftp关闭中</string>
	<!-- json容错相关 -->
	<string name="jsontestresult">Json自动化测试结果</string>
	<string name="jsonnoexcept">没有发现json容错异常</string>
	<string name="jsonnoresultfile">没有找到测试结果文件，请手工查看一下，如果有请报工具bug</string>
	<!-- 广播actions相关 -->
	<string name="actionsfilename">actions.txt</string>
	<string name="actionswitchon">开始</string>
	<string name="actionswitchoff">停止</string>
	<string name="actionsfreq">设置发送action的间隔(min)</string>
	<string name="cfg_action_cnt">broadcastcnt</string>
	<string name="key_action_cnt">bdcnt</string>
	<string name="issending">issending</string>
	<string name="freq_not_a_num">请输入正整数哈</string>
	<string name="last_sended_time">上一次发送完所有广播时间为：%1$s</string>
	
	
	<string name="test_app_name_view">已选择%1$s</string>
	<string name="install_app_name_view">确认要安装%1$s？</string>
	<!-- 联系人相关 -->
	<string name="contact_backup">contact_backup</string>
	<string name="contact_key">contact_key</string>
	<string name="contact_group">contact_group</string>
	<!-- 以下是ftpserver的固有string -->
	 <string name="swiftp_name">FTP Server</string>
    <string name="running_label">FTP Server</string>
    <string name="running_summary_stopped">Toggle the state of the ftp server</string>
    <string name="running_summary_started">at %s</string>
    <string name="running_summary_failed">Failed to start the FTP server, not connected to the local network (wifi or ethernet)?</string>
    <string name="market_version_label">Market version</string>
    <string name="market_version_summary">
        This is the FTP Server Demo version.
        Support development by getting the FTP Server from the android market.
        Click here to go to the market.</string>
    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="loginsettings_label">Login settings...</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="anonymous_label">Anonymous</string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Anonymous logins are only allowed read access</string>
    <string name="advancedsettings_label">Advanced settings...</string>
    <string name="portnumber_label">Port Number</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="acceptwifi_label">Accept connection from wifi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="extra_label">Extra</string>
    <string name="help_label">Help...</string>
    <string name="about_label">About...</string>
    <string name="help_dlg_title">FTP Server Help</string>
    <string name="help_dlg_message">\
Thanks for using FTP Server (SwiFTP)! Here are some brief usage instructions. More
information can be found at http://ppareit.github.com/swiftp/.\n\n\
\
This program allows you to run an ftp server on your android device. This means that any
program can access the files on your device while the ftp server is running. For example,
entering \'ftp://...\' in the firefox url bar will allow you to browse the files on your
device from a desktop pc or a laptop.\n\n
\
By default, the user name and password are both \'ftp\', you should change them. You use
this username and password when accessing the server.\n\n
\
There is a configuration option (\"keep phone awake\") that fixes a problem where
file transfers go slow or stop completely when the phone sleeps. If you have this
problem, check this box and restart the program. Your phone will stay awake as long as
the server is running.\n\n
\
For power and security reasons, it is recommended that the server be stopped after use.\n\n\
\
If something is not working the way you expect it to, please report it to Pieter Pareit
(pieter.pareit@gmail.com).\n\n\
\
The development of this open source program is supported by buying this program through
the google play store. You can follow the development at https://github.com/ppareit/swiftp .
To have an idea on the features that will be implemented, see the issue tracker at
https://github.com/ppareit/swiftp/issues .\n\n
    </string>
    <string name="about_dlg_title">FTP Server About</string>
    <string name="about_dlg_message">
        <b>Description: </b>
        FTP Server (SwiFTP) allows you to run an ftp server on your android device.\n\n\
        <b>Website:</b>
        http://ppareit.github.com/swiftp/\n\n
        <b>Current maintainer:</b>
        Pieter Pareit (pieter.pareit@gmail.com)\n\n
        <b>Programming: </b>\
        Dave Revell (dave.revell@gmail.com), Pieter Pareit (pieter.pareit@gmail.com)\n\n\
        <b>Artwork:</b>
        Birgit Niemegeers\n\n
        <b>License: </b>
        GNU General Public License v3.0\n\n
    </string>
    <string name="notif_server_starting">Starting at %s</string>
    <string name="notif_title">FTP Server is running</string>
    <string name="notif_text">at %s</string>
    <string name="notif_stop_text">Stop server</string>

    <string name="nsd_servername_postfix">FTP Server</string>

    <!-- old strings -->
    <string name="cant_get_url">Can\'t retrieve url</string>
    <string name="unknown">unknown</string>
    <string name="ok">OK</string>
    <string name="username_validation_error">The password must consist of 1 or more alphanumeric characters. No other characters are allowed.</string>
    <string name="password_validation_error">The password must consist of 1 or more alphanumeric characters. No other characters are allowed.</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="wifi_state_receiver_label">WifiStateReceiver</string>
    <string name="pst_connecting">connecting</string>
    <string name="pst_connected">connected</string>
    <string name="pst_failed">failed</string>
    <string name="pst_unreachable">unreachable</string>
    <string name="pst_disconnected">disconnected</string>
    <string name="storage_warning">Warning: storage is not available. You may want to unmount it.</string>
    <string name="widget_name">FTP Server Widget</string>
    <string name="ftptitle">文件互传开关</string>
    <string name="contact_name">姓名:</string>
    <string name="contact_email">E-Mail:</string>
    <string name="contact_ip">IP地址:</string>
    <string name="contact_cancel">取消</string>
    <string name="contact_confirm">设为邮件接收者</string>
    <string name="contact_actionbar_title">刷新</string>
    <string name="contact_actionbar_clear">清空</string>
    <string name="setpackage">当前被测APP包名</string>
    <string name="pkg_hint">输入法为com.sohu.inputmethod.sogou</string>
    <string name="set_new_pkg">设为被测APP</string>
    <string name="cancel_pkg_set">默默离开不修改</string>
    <string name="defaultpkgname">暂未设置包名</string>
    <string name="install_apk">安装</string>
    <string name="cancel_install">取消</string>
</resources>
