<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:text="@string/cancel_pkg_set" 
        android:onClick="onCancel"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/app_pkg_name_edit"
        android:layout_alignRight="@+id/app_pkg_name_edit"
        android:text="@string/set_new_pkg" 
        android:onClick="onSetPkgName"/>

    <EditText
        android:id="@+id/app_pkg_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/pkg_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/app_pkg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_pkg_name_edit"
        android:layout_alignLeft="@+id/app_pkg_name_edit"
        android:text="@string/defaultpkgname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_pkg_name"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:text="@string/setpackage" />

</RelativeLayout>
