<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:onClick="onCancel"
        android:text="@string/cancel_pkg_set" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onSetTestPkgName"
        android:text="@string/set_new_pkg" />

    <TextView
        android:id="@+id/test_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#76EE00"
        android:gravity="center"
        android:text="@string/defaultpkgname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

</RelativeLayout>