<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abouttabid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/scheduleTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scheduleToggle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/ftptitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/actionFreqET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scheduleTaskBtn"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/scheduleTaskBtn"
        android:ems="10"
        android:hint="@string/actionsfreq" />

    <ListView
        android:id="@+id/actionlv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/last_sended_time" 
        android:layout_marginBottom="53dp">

    </ListView>

    <Button
        android:id="@+id/scheduleTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scheduleToggle"
        android:onClick="onSendbroadcast"
        android:text="@string/actionswitchon" />

    <ToggleButton
        android:id="@+id/scheduleToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/actionFreqET"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/last_sended_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actionFreqET"
        android:text="Large Text"
        android:background="#FFA54F"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>